--- a/Lego.ipynb
+++ b/Lego.ipynb
@@ -1,21 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#The project will analyse the different themes and colours of Lego sets over time with Python.\n",
-    "# is based off the Datacamp project.\n",
+    "The project will analyse the different themes and colours of Lego sets over time with Python.\n",
+    "\n",
+    "Inspired by the DataCamp Exploring the History of Lego project by Ramnath Vaidyanathan.\n",
     "\n",
     "\n",
-    "#First I will import the data colors and look at the first few rows. "
+    "First I will import the data colors and look at the first few rows. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +93,7 @@
        "4   3  Dark Turquoise  008F9B        f"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,12 +110,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#We can see from the data that there is 135 colours available for lego blocks. "
+    "From the first few lines we can see the color id(id), the colour name(name) and the color code(rgb). The is_trans column of the dataset indicates whether a colour is transparent or not with f representing false and t representing true.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see from the data below that there is 135 colours available for lego blocks. "
    ]
   },
   {
@@ -138,20 +142,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#The is_trans column of the dataset indicates whether a colour is transparent or not. \n",
-    "\n",
-    "#Below we can see the distribution of transparent vs. non-transparent colours in a plot."
+    "Below we can see the distribution of transparent vs. non-transparent colours in a plot\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -171,8 +173,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This shows that there is considerably more bricks that are not transparent than are with only around 26% \n",
+    "colours being transparent over time.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +249,7 @@
        "4  1956  18.500000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -257,7 +267,8 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
+    "#We can explore the average number of parts in Lego sets over the years\n",
+    "\n",
     "# Read sets data as `sets`\n",
     "sets = pd.read_csv('sets.csv')\n",
     "# Create a summary of average number of parts by year: `parts_by_year`\n",
@@ -272,17 +283,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Lego blocks ship under multiple themes and we can look at how many themes are shipped each year. "
+    "We can see above that as there is an upward trend of variations of the number of parts in a lego set. Particularly \n",
+    "in 1960 and the mid 2010s with a steep incline of parts used.\n",
+    "\n",
+    "We can explore the lego blocks different themes and how many themes are shipped per year below. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -349,17 +361,17 @@
        "4  1956         3"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "# themes_by_year: Number of themes shipped by year\n",
     "themes_by_year = sets[['year', 'theme_id']].\\\n",
     "  groupby('year', as_index = False).\\\n",
     "  agg({\"theme_id\": pd.Series.nunique})\n",
-    "themes_by_year.head()\n"
+    "themes_by_year.head()"
    ]
   },
   {
